--- a/style.css
+++ b/style.css
@@ -23,5 +23,33 @@ li {
 img {
   max-width: 100%;
   height: auto;
+  -o-object-fit: contain;
   object-fit: contain;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+
+  gap: 1.5rem;
+
+  justify-content: center;
+  align-items: center;
+
+  flex-wrap: wrap;
+  align-content: space-evenly;
+}
+
+.box {
+  width: 12rem;
+  height: 12rem;
+  background-color: skyblue;
+  border: 2px solid black;
+  font-size: 5rem;
+  font-weight: 900;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
